package com.jad.efreifive.manageteam.service;

public interface ITeamAdminService {
    void massiveCreatePlayers();

    void massiveUpdatePlayers();
}
